--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
-- name: Blog
-  link: /blog/
-  new_window: false
-  highlight: false
+# - name: Blog
+#   link: /blog/
+#   new_window: false
+#   highlight: false
 # - name: About
 #   link: /about/
 #   new_window: false
