--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,7 +3,7 @@
     link: https://twitter.com/planner_todo
     social_icon: Twitter
     new_window: true
-# - links:
-#   - name: Blog
-#     link: /blog/
+- links:
+  - name: Blog
+    link: /blog/
 
