--- a/.travis.yml
+++ b/.travis.yml
@@ -1,56 +1,26 @@
-#use node_js
-language: node_js
-
-#define node js version to use
-node_js:
-  - "7"
-
-#choose branch on commit of which this script should excecute
+#rename to .travis.yml and use in your project
+language: ruby
+rvm:
+- 2.3.3
+env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
 branches:
   only:
     - master
+    - develop
 
-#set notifications frequency
-notifications:
-  email:
-    on_success: never
-    on_failure : change 
-
+sudo: required
 
 before_install:
-  #install rvm 2.2
-  - rvm install 2.2
-  #use rvm 2.2
-  - rvm use 2.2
-  #set home varaibles
-  - . $HOME/.nvm/nvm.sh && nvm install 6.1 && nvm use 6.1  
-  #install gems through bundler
-  - gem install bundler 
-  #if gems are missing this script will get the missing gems.
-  - bundle check || bundle install 
+  - nvm install node
+  - ruby -v
 
 install:
-  #install firebase tools, required to deploy on firebase hosting 
-  - npm install -g firebase-tools 
+  - gem install jekyll
+  - npm install -g https://github.com/firebase/firebase-tools.git
 
-
-# Assume bundler is being used, therefore
-# the `install` step will run `bundle install` by default.
-script: 
-  #continue even after error
-  - set -e 
-  #build jekyll site
-  - jekyll build 
-
-after_success:
-  #deploy to firebase using stored token. 
-  - firebase deploy --token "$FIREBASE_API_TOKEN" 
-
-env:
-  global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
-
-sudo: false # route your build to the container-based infrastructure for a faster build
-
-#Visit article at - http://wrapcode.com
-#Cheers, Rahul.
+before_script:
+  - jekyll build
+script:
+  - firebase deploy --token "$FIREBASE_API_TOKEN"
