--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ before_install:
   - ruby -v
 
 install:
-  - gem install jekyll
+  - gem install bundler jekyll
   - npm install -g https://github.com/firebase/firebase-tools.git
 
 before_script:
-  - jekyll build
+  - bundle exec jekyll build --verbose
 script:
   - firebase deploy --token "$FIREBASE_API_TOKEN"
