--- a/.travis.yml
+++ b/.travis.yml
@@ -2,26 +2,17 @@
 language: ruby
 rvm:
 - 2.5.1
-env:
-  global:
-    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
-branches:
-  only:
-    - master
-    - develop
-
-sudo: required
 
 before_install:
-  - nvm install node
-  - ruby -v
+   - nvm install node
+   - ruby -v
 
 install:
-  - gem install bundler jekyll
-  - npm install -g https://github.com/firebase/firebase-tools.git
+  - gem install bundle jekyll
+  - bundle install
 
 before_script:
-  - bundle install
   - bundle exec jekyll build --verbose
 script:
   - firebase deploy --token "$FIREBASE_API_TOKEN"
+
