--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 install:
   - gem install bundle jekyll
   - bundle install
+  - npm install -g https://github.com/firebase/firebase-tools.git
 
 before_script:
   - bundle exec jekyll build --verbose
