--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,53 @@
-#rename to .travis.yml and use in your project
-language: ruby
-rvm:
-- 2.5.1
+#use node_js
+language: node_js
+
+#define node js version to use
+node_js:
+  - 10.19.0
+
+#choose branch on commit of which this script should excecute
+branches:
+  only:
+    - master
+
+#set notifications frequency
+notifications:
+  email:
+    on_success: never
+    on_failure : change 
+
 
 before_install:
-   - nvm install node
-   - ruby -v
+  #install rvm 2.2
+  - rvm install 2.5.1
+  #use rvm 2.2
+  - rvm use 2.5.1
+  #set home varaibles
+  - . $HOME/.nvm/nvm.sh && nvm install 6.1 && nvm use 6.1  
+  #install gems through bundler
+  - gem install bundler jekyll
+  #if gems are missing this script will get the missing gems.
+  - bundle check || bundle install 
 
 install:
-  - gem install bundle jekyll
-  - bundle install
-  - npm install -g https://github.com/firebase/firebase-tools.git
+  #install firebase tools, required to deploy on firebase hosting 
+  - npm install -g firebase-tools 
 
-before_script:
+
+# Assume bundler is being used, therefore
+# the `install` step will run `bundle install` by default.
+script: 
+  #continue even after error
+  - set -e 
+  #build jekyll site
   - bundle exec jekyll build --verbose
-script:
-  - firebase deploy --token "$FIREBASE_API_TOKEN"
 
+after_success:
+  #deploy to firebase using stored token. 
+  - firebase deploy --token "$FIREBASE_API_TOKEN" 
+
+env:
+  global:
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+
+sudo: false # route your build to the container-based infrastructure for a faster build
