--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Planner
 url: "https://planner-todo.web.app"
 baseurl:
-google_analytics_key:
+google_analytics_key: UA-148011698-1
 google_maps_javascript_api_key:
 disqus_shortname:
 
