--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -6,6 +6,9 @@
 - links:
   - name: Blog
     link: /blog/
-  - name: Funding
+  - name: Donate
     link: /support/
+  - name: Privacy Policy
+    link: /privacy-policy/
+
 
