--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,4 @@
 - name: Blog
   link: /blog/
-- name: Funding
+- name: Donate
   link: /support/
-#   new_window: false
-#   highlight: false
-# - name: About
-#   link: /about/
-#   new_window: false
-#   highlight: false
-# - name: Contact
-#   link: /contact/
-#   new_window: false
-#   highlight: false
-# - name: Login
-#   link: /
-#   new_window: true
-#   highlight: false
-# - name: Sign Up
-#   link: /
-#   new_window: true
-#   highlight: true
